--- a/final_report/heatlod_final.tex
+++ b/final_report/heatlod_final.tex
@@ -61,213 +61,74 @@ In Moccasin, only four variables were observed to have been measured both in 201
 
 \end{knitrout}
 
+
+
 \subsection{Bozeman by Year}
 We assessed the pairwise correlation of the different sites each year. In 2014, twelve pairs of explanatory variables had correlation coefficients between 0.42 and 0.91. The pairwise correlations are shown in the matrix below. Germination and total yield was strongly correlated (r=0.66) while the length and internode length of the plants recorded a very high correlation coefficient (r=0.91). In 2015 and 2016, of the pairwise combinations assessed, 28 combinations yielded correlation coefficients between 0.40 and 0.85. The results are presented in the pairwise correlation matrices below.
 
 \begin{knitrout}\footnotesize
-\definecolor{shadecolor}{rgb}{1, 1, 1}\color{fgcolor}\begin{kframe}
+\definecolor{shadecolor}{rgb}{1, 1, 1}\color{fgcolor}
+
+{\centering \includegraphics[width=\maxwidth]{figure/bz-1} 
+
+}
 
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in eval(expr, envir, enclos): object 'bz16' not found}}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman16)[colnames(bozeman16) == "{}pctg\_Lodging\_boze\_2016"{}] <- "{}prcnt\_lodging"{}: object 'bozeman16' not found}}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman16)[colnames(bozeman16) == "{}GerminateNABozemanNA2016"{}] <- "{}germination"{}: object 'bozeman16' not found}}
+{\centering \includegraphics[width=\maxwidth]{figure/bz-2} 
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman16)[colnames(bozeman16) == "{}Avg\_brnch\_numb\_boz\_2016"{}] <- "{}branch\_numb"{}: object 'bozeman16' not found}}
+}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman16)[colnames(bozeman16) == "{}avg\_height\_boze\_2016"{}] <- "{}avg\_plant\_height"{}: object 'bozeman16' not found}}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman16)[colnames(bozeman16) == "{}avg\_length\_boze\_2016"{}] <- "{}avg\_plant\_length"{}: object 'bozeman16' not found}}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman16)[colnames(bozeman16) == "{}Mat\_time\_boze\_2016"{}] <- "{}maturity\_time"{}: object 'bozeman16' not found}}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman16)[colnames(bozeman16) == "{}avg\_tend\_length\_boze\_2016"{}] <- "{}tendril\_length"{}: object 'bozeman16' not found}}
+{\centering \includegraphics[width=\maxwidth]{figure/bz-3} 
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman16)[colnames(bozeman16) == "{}Avg\_Main\_stem\_diam\_boze\_2016"{}] <- "{}main\_stem\_diam"{}: object 'bozeman16' not found}}
+}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman16)[colnames(bozeman16) == "{}avg\_comp\_mn\_stm\_dia\_boze\_2016"{}] <- "{}comp\_main\_stem\_diam"{}: object 'bozeman16' not found}}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman16)[colnames(bozeman16) == "{}avg\_comp\_brnch\_diam\_boze\_2016"{}] <- "{}comp\_branch\_diam"{}: object 'bozeman16' not found}}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman16)[colnames(bozeman16) == "{}avg\_branch\_diam\_boze\_2016"{}] <- "{}branch\_diam"{}: object 'bozeman16' not found}}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman16)[colnames(bozeman16) == "{}comp\_brnch\_diam\_boze\_2016"{}] <- "{}comp\_branch\_diam"{}: object 'bozeman16' not found}}
+{\centering \includegraphics[width=\maxwidth]{figure/bz-4} 
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman16)[colnames(bozeman16) == "{}avg\_root\_diam\_boze\_2016"{}] <- "{}root\_diam"{}: object 'bozeman16' not found}}
+}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in ncol(x): object 'bozeman16' not found}}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in subset(bozeman16, select = -c(Line\_name, planting\_generation, : object 'bozeman16' not found}}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in eval(expr, envir, enclos): object 'bozeman16v2' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in ncol(x): object 'bozeman16v3' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in eval(expr, envir, enclos): object 'bz14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman14)[colnames(bozeman14) == "{}Prcnt.Lodging"{}] <- "{}prcnt\_lodging"{}: object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman14)[colnames(bozeman14) == "{}Germination.2014.."{}] <- "{}gemination"{}: object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman14)[colnames(bozeman14) == "{}branch.numb.2014"{}] <- "{}branch\_numb"{}: object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman14)[colnames(bozeman14) == "{}height"{}] <- "{}plant\_height"{}: object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman14)[colnames(bozeman14) == "{}length"{}] <- "{}plant\_length"{}: object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman14)[colnames(bozeman14) == "{}tendril.length.14.node.2014"{}] <- "{}tendril\_length\_node"{}: object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman14)[colnames(bozeman14) == "{}tendril.length.2014"{}] <- "{}tendril\_length"{}: object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman14)[colnames(bozeman14) == "{}Nodes.1st.flow.2014"{}] <- "{}nodes\_1st\_flow"{}: object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman14)[colnames(bozeman14) == "{}max.nodes.2014"{}] <- "{}max\_nodes"{}: object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman14)[colnames(bozeman14) == "{}internode.length.2014"{}] <- "{}internode\_length"{}: object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman14)[colnames(bozeman14) == "{}Total.yield.2014"{}] <- "{}total\_yield"{}: object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman14)[colnames(bozeman14) == "{}Avg.Yld.Plant.2014"{}] <- "{}avg\_total\_yield"{}: object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman14)[colnames(bozeman14) == "{}Main.stm.diameter.2014"{}] <- "{}main\_stm\_diam"{}: object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman14)[colnames(bozeman14) == "{}Average.compressed.main.stem.thickness.2014"{}] <- "{}comp\_main\_stm"{}: object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman14)[colnames(bozeman14) == "{}Tiller.diameter.2014"{}] <- "{}tiller\_diam"{}: object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman14)[colnames(bozeman14) == "{}compressed.tiller.thickness.2014"{}] <- "{}comp\_tiller\_diam"{}: object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman14)[colnames(bozeman14) == "{}length.1"{}] <- "{}length\_1"{}: object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in subset(bozeman14, select = -c(DNA.GENERATION, LINE.., Germination.2014NACHECKED, : object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in eval(expr, envir, enclos): object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in ncol(x): object 'bozeman14' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in eval(expr, envir, enclos): object 'bz15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman15)[colnames(bozeman15) == "{}Yield"{}] <- "{}yield"{}: object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman15)[colnames(bozeman15) == "{}X..GERMINATION.AVG.with.bad.germinating.lines.left.in.and.adjusted.for.seeds.planted"{}] <- "{}avg\_germination"{}: object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman15)[colnames(bozeman15) == "{}X..of.branch"{}] <- "{}branch\_numb"{}: object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman15)[colnames(bozeman15) == "{}plants.harvested"{}] <- "{}plants\_harvested"{}: object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman15)[colnames(bozeman15) == "{}X..Lodging"{}] <- "{}prcnt\_lodging"{}: object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman15)[colnames(bozeman15) == "{}Average.height"{}] <- "{}plant\_height"{}: object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman15)[colnames(bozeman15) == "{}average.length..Median.2015.40NA45cm."{}] <- "{}plant\_length"{}: object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman15)[colnames(bozeman15) == "{}Mat.time"{}] <- "{}maturity\_time"{}: object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman15)[colnames(bozeman15) == "{}tendril.width"{}] <- "{}tendril\_width"{}: object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman15)[colnames(bozeman15) == "{}tendril.Length"{}] <- "{}tendril\_length"{}: object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman15)[colnames(bozeman15) == "{}Nodes.1st.flow"{}] <- "{}nodes\_1st\_flow"{}: object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman15)[colnames(bozeman15) == "{}max.nodes"{}] <- "{}max\_nodes"{}: object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman15)[colnames(bozeman15) == "{}main.stem.DIAm.avg"{}] <- "{}main\_stem\_diam"{}: object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman15)[colnames(bozeman15) == "{}Main.stem.comp..avg"{}] <- "{}comp\_main\_stem\_diam"{}: object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman15)[colnames(bozeman15) == "{}tiller.Diam.AVG"{}] <- "{}tiller\_diam"{}: object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman15)[colnames(bozeman15) == "{}tiller.compressed.avg"{}] <- "{}comp\_tiller\_avg"{}: object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman15)[colnames(bozeman15) == "{}Root.compressed.avg"{}] <- "{}avg\_comp\_root"{}: object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(bozeman15)[colnames(bozeman15) == "{}avg.main..side.brnch.root"{}] <- "{}main\_branch\_root"{}: object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in subset(bozeman15, select = -c(line.., average.lodging.Moccasin.2015, : object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in eval(expr, envir, enclos): object 'bozeman15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in ncol(x): object 'bozeman15' not found}}\end{kframe}
 \end{knitrout}
 
 \subsection{Moccasin by Year}
 
 \begin{knitrout}\footnotesize
-\definecolor{shadecolor}{rgb}{1, 1, 1}\color{fgcolor}\begin{kframe}
+\definecolor{shadecolor}{rgb}{1, 1, 1}\color{fgcolor}
+
+{\centering \includegraphics[width=\maxwidth]{figure/moc-1} 
+
+}
 
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in eval(expr, envir, enclos): object 'moc16' not found}}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin16)[colnames(moccasin16) == "{}pctg\_Lodging\_boze\_2016"{}] <- "{}prcnt\_lodging"{}: object 'moccasin16' not found}}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin16)[colnames(moccasin16) == "{}X..GerminationNAMoccasinNA2016"{}] <- "{}prcnt\_germination"{}: object 'moccasin16' not found}}
+{\centering \includegraphics[width=\maxwidth]{figure/moc-2} 
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin16)[colnames(moccasin16) == "{}Tendril.Length.2016"{}] <- "{}tendril\_length"{}: object 'moccasin16' not found}}
+}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin16)[colnames(moccasin16) == "{}Avg.branch.number.2016"{}] <- "{}branch\_numb"{}: object 'moccasin16' not found}}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin16)[colnames(moccasin16) == "{}Mat.timeNA.MoccasinNA2016"{}] <- "{}maturity\_time"{}: object 'moccasin16' not found}}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin16)[colnames(moccasin16) == "{}AVG.length.moc.2016"{}] <- "{}plant\_length"{}: object 'moccasin16' not found}}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin16)[colnames(moccasin16) == "{}X.lodging.2016"{}] <- "{}prcnt\_lodging"{}: object 'moccasin16' not found}}
+{\centering \includegraphics[width=\maxwidth]{figure/moc-3} 
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin16)[colnames(moccasin16) == "{}Main.stem.diam.avg.2016"{}] <- "{}main\_stem\_diam"{}: object 'moccasin16' not found}}
+}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin16)[colnames(moccasin16) == "{}avg.branch.diam.2016"{}] <- "{}branch\_diam"{}: object 'moccasin16' not found}}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin16)[colnames(moccasin16) == "{}avg.root.diam.2016"{}] <- "{}root\_diam"{}: object 'moccasin16' not found}}
 
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in subset(moccasin16, select = -c(Line.name, white.flow.moc.2016.checked, : object 'moccasin16' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in eval(expr, envir, enclos): object 'moccasin16' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in ncol(x): object 'moccasin16' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in eval(expr, envir, enclos): object 'moc15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin15)[colnames(moccasin15) == "{}Lodging"{}] <- "{}prcnt\_lodging"{}: object 'moccasin15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin15)[colnames(moccasin15) == "{}stress.minus.equation"{}] <- "{}stress\_m\_eqn"{}: object 'moccasin15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin15)[colnames(moccasin15) == "{}original.stress.equation"{}] <- "{}ognl\_stress\_eqn"{}: object 'moccasin15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin15)[colnames(moccasin15) == "{}stress.minus.equation.with.standard.thickness"{}] <- "{}SME\_Std\_thickn"{}: object 'moccasin15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin15)[colnames(moccasin15) == "{}Height"{}] <- "{}plant\_height"{}: object 'moccasin15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin15)[colnames(moccasin15) == "{}main.stem.DIAm.3"{}] <- "{}main\_stem\_diam"{}: object 'moccasin15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin15)[colnames(moccasin15) == "{}tiller.Diam.3"{}] <- "{}tiller\_diam"{}: object 'moccasin15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin15)[colnames(moccasin15) == "{}tiller.compressed.3"{}] <- "{}tiller\_comp"{}: object 'moccasin15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin15)[colnames(moccasin15) == "{}till.comp.flex"{}] <- "{}till\_comp\_flex"{}: object 'moccasin15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin15)[colnames(moccasin15) == "{}Flex.after.crushing"{}] <- "{}flex\_crush"{}: object 'moccasin15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in colnames(moccasin15)[colnames(moccasin15) == "{}Root"{}] <- "{}root"{}: object 'moccasin15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in subset(moccasin15, select = -c(X)): object 'moccasin15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in ncol(x): object 'moccasin15' not found}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in setwd("{}C:/Users/Paul/Documents"{}): cannot change working directory}}
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in ncol(x): object 'moccasin16' not found}}\end{kframe}
 \end{knitrout}
 
 
 \section{Site Year Combinations for Lodging}
 
 
-\begin{knitrout}\footnotesize
-\definecolor{shadecolor}{rgb}{1, 1, 1}\color{fgcolor}\begin{kframe}
-
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{Error in setwd("{}C:/Users/Paul/Documents"{}): cannot change working directory}}\end{kframe}
-\end{knitrout}
 
 \subsection{Exploratory Analysis} 
 The data were collected over a period of 4 field seasons at sites in Bozeman and 2 field seasons in Moccasin. Phenotypic data were analyzed in order to determine whether conditions were similar enough at each year/site combination to consider as a single dataset, or if they differ by enough that the sites and years need to be considered as different groups.  
@@ -289,7 +150,7 @@ If the sites are reasonably similar, we would expect to see parallel lines that 
 
 
 \subsection{Regression Model}
-  The regression treats Bozeman 2014 as the baseline (intercept) group. Each site-year combination is tested against the   baseline; small p-values indicate that the given group differs from the baseline. The p-values for each of the other site-year combinations are all quite small â€“ the largest, for Bozeman 2015, is only 0.015, indicating strong evidence that each of the site/year combinations differ from the baseline. Moreover, the effect size ranges from 4 to 7 points on the 1-100 percent scale on which Percent Lodging is measured.  The confidence intervals given give estimates of the true mean lodging at each site/year combination. If all the intervals overlapped, we might have evidence that the combinations are at least reasonably similar; however, the 2016 interval in Moccasin and the 2014/2015 Bozeman intervals do not overlap. 
+  The regression treats Bozeman 2014 as the baseline (intercept) group. Each site-year combination is tested against the   baseline; small p-values indicate that the given group differs from the baseline. The p-values for each of the other site-year combinations are all quite small â*** the largest, for Bozeman 2015, is only 0.015, indicating strong evidence that each of the site/year combinations differ from the baseline. Moreover, the effect size ranges from 4 to 7 points on the 1-100 percent scale on which Percent Lodging is measured.  The confidence intervals given give estimates of the true mean lodging at each site/year combination. If all the intervals overlapped, we might have evidence that the combinations are at least reasonably similar; however, the 2016 interval in Moccasin and the 2014/2015 Bozeman intervals do not overlap. 
 
 
 
